--- a/index.html
+++ b/index.html
@@ -3,40 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Artigiano Manager</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Artigiano Manager Pro</title>
+    <link rel="stylesheet" href="style.css?v=0.0.01">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#f2f2f7">
+    <link rel="apple-touch-icon" href="icons/icon-192.png">
+    
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
 
-    <div id="app-container" style="padding: 20px;">
-        <header style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px;">
-            <h1 style="font-size: 28px; font-weight: 800; margin: 0;">Artigiano</h1>
-            <div style="background: var(--it-red); color: white; padding: 5px 12px; border-radius: 20px; font-size: 12px; font-weight: bold;">PRO</div>
-        </header>
-
-        <div class="grid-dashboard" style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
-            <div class="card green" onclick="window.app.abrirSacolao()">
-                <i data-lucide="leaf"></i><span>Sacolão</span>
-            </div>
-            <div class="card yellow" onclick="window.app.abrirProducao()">
-                <i data-lucide="scale"></i><span>Produção</span>
-            </div>
-            <div class="card blue" onclick="window.app.abrirLimpeza()">
-                <i data-lucide="sparkles"></i><span>Limpeza</span>
-            </div>
-            <div class="card grey" onclick="window.app.abrirInsumos()">
-                <i data-lucide="package"></i><span>Insumos</span>
-            </div>
-            <div class="card red" onclick="window.app.abrirBebidas()">
-                <i data-lucide="beer"></i><span>Bebidas</span>
-            </div>
-            <div class="card purple" onclick="window.app.abrirHistorico()">
-                <i data-lucide="scroll-text"></i><span>Histórico</span>
-            </div>
+    <div id="app-container">
+        <div style="display:flex; flex-direction:column; justify-content:center; align-items:center; height:100vh; background:#f2f2f7;">
+            <div style="width: 50px; height: 50px; border: 5px solid #ccc; border-top-color: #008C45; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+            <p style="margin-top:20px; font-family:-apple-system; color:#666;">Carregando Artigiano...</p>
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <div id="version-footer" style="position: fixed; bottom: 20px; left: 0; right: 0; text-align: center; font-family: -apple-system; font-size: 12px; color: #8e8e93; pointer-events: none; z-index: 1000;">
+        v 0.0.01
+    </div>
+
+    <style>
+        @keyframes spin { to { transform: rotate(360deg); } }
+    </style>
+
+    <script type="module" src="main.js?v=0.0.01"></script>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('./sw.js?v=0.0.01')
+                .then(() => console.log("Service Worker registrado com sucesso!"))
+                .catch(err => console.log("Erro ao registrar SW:", err));
+        }
+    </script>
 </body>
 </html>
